<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_request_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_get"/>

    <Button
        android:id="@+id/btn_request_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_post"/>

    <Button
        android:id="@+id/btn_request_jsonData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_jsonData"/>

    <Button
        android:id="@+id/btn_imageRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imageRequest"/>

    <Button
        android:id="@+id/btn_imageLoader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imageLoader"/>

    <Button
        android:id="@+id/btn_networkImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/networkImageView"/>

    <TextView
        android:id="@+id/btn_showResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showResult"/>

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/iv_networkImageView"
        android:visibility="gone"
        android:layout_height="200dp"
        android:layout_width="200dp">

    </com.android.volley.toolbox.NetworkImageView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_showResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/noResult"/>

    </ScrollView>

</LinearLayout>